# ChangeLog for dev-python/gpxdata
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Apr 2011; James Rowe <jnrowe@gmail.com> gpxdata-1.1.0.ebuild:
  Keyworded amd64.

  28 Mar 2011; James Rowe <jnrowe@gmail.com> -gpxdata-1.0.ebuild,
  gpxdata-1.0.2.ebuild:
  Keyworded x86.

  26 Mar 2011; James Rowe <jnrowe@gmail.com> gpxdata-1.0.2.ebuild:
  Keyworded amd64.

  02 Mar 2011; James Rowe <jnrowe@gmail.com> gpxdata-1.0.ebuild,
  gpxdata-1.0.2.ebuild, gpxdata-1.1.0.ebuild:
  Use PN in PYTHON_MODNAME [cosmetic].

*gpxdata-1.0.2 (22 Feb 2011)

  22 Feb 2011; James Rowe <jnrowe@gmail.com> +gpxdata-1.0.2.ebuild:
  Version bump [280].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  04 Dec 2010; James Rowe <jnrowe@gmail.com> gpxdata-1.0.ebuild:
  Keyworded x86.

  03 Dec 2010; James Rowe <jnrowe@gmail.com> gpxdata-1.0.ebuild:
  Keyworded amd64.

  01 Nov 2010; James Rowe <jnrowe@gmail.com> gpxdata-1.0.ebuild:
  Keyworded ~x86.

*gpxdata-1.0 (01 Nov 2010)

  01 Nov 2010; James Rowe <jnrowe@gmail.com> +gpxdata-1.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me [221].
