@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST gpxdata-1.0.2.tar.gz 5648 RMD160 a19d67260a5d5510bc13ee525da98ee175f55b03 SHA1 293cc57164869be92e742716aa04b6b58d7c579c SHA256 070a86dc02edd7f48828fb052bece7ba9ff48b781cf03071a49ee9b50f2c39c8
 DIST gpxdata-1.1.0.tar.gz 8337 RMD160 2085f9998a4725cbf37681a58043ef7d67745d73 SHA1 7ac20e41959e39824efc3e72fcb3b73dc1b5f75d SHA256 8db52ff501eeae269050663bca67c031e706f8854c72f4d408f9887a23cc9f9d
-EBUILD gpxdata-1.0.2.ebuild 614 RMD160 9a5e278c8409a587f53081471fa492f669fc0bfb SHA1 b7fff3b61e6b1a8babe7a43a00f13b2a7030800c SHA256 ddb1a432660e6791b943b1a943d85df082e7000b51944eaa653c9db8a28a8572
-EBUILD gpxdata-1.1.0.ebuild 616 RMD160 5fb8d486402f1d7660848e4960fc552447cabfdd SHA1 476dc4316ade237d74a635c52ab7e3ca7a94ba63 SHA256 58067b7419386704e575bfc604f622ce3a0530848967f74737c3a31012bc4f18
-MISC ChangeLog 1162 RMD160 49c38a64396507af0c92e50b4f51293145150462 SHA1 1003e59abaab1fe1e87f6324cdd88ea59bfae8af SHA256 6ebea5f795bb11c9bd7ea5d28e4245585009791552fc25f334c967bb37b2a739
+EBUILD gpxdata-1.1.0.ebuild 615 RMD160 f1bf2297a8a39bbd11a513bb83f9337f46b34da3 SHA1 c344e336f855c05bf514564b54e4f1c7e8f5cd47 SHA256 737f32b3f30cf932b389434f2dc4d83a34fb7e7194ad39d0ec873b70fc41fd49
+MISC ChangeLog 1272 RMD160 3494685af6f304e06bbe38d8acd01a839ecbc285 SHA1 b99e6642cc4ec6c7377a43fe31107474293390bb SHA256 80e882e02ac459a9a2504aad9cf29017e4e97b615245aeaff40442efec730150
 MISC metadata.xml 443 RMD160 6a1d04434a65e17e8e303db5c44e8d03c64795b1 SHA1 27acbadd0345aa9dd61a9e8f30384867491f2b19 SHA256 25d458ef912c0cb74ac0cc8fdd784b903bf782ccfdb84d945549f0a64535c4e4
 MISC watch 66 RMD160 57182895a06493aa5abb82fae76e5efaefffe376 SHA1 176bd1b3d55762f3fcb45d1eee81f0c34f087633 SHA256 335c88926281ecbe192526aaa2658e8a54045d1b9f4a68bf42458cf90e89d5c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2VybYACgkQzJrj3cAXR0m/5QCdEcBZiDkcLzsjPm1drPzNX3yS
-+14An0XT9lm/oNB3aBHNPv1nI9R6OnF2
-=AcR0
+iEYEARECAAYFAk2V0EsACgkQzJrj3cAXR0mI2wCfchk4mwoHWoppVBp2RoCCSPLy
+ja4AmwSp+IyrI43aduJQjDaD9qXU9vt+
+=a/+Q
 -----END PGP SIGNATURE-----
