@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
-dev-python/egenix-mx-base >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-http://www.kette-links.de/technik/gpxdata-1.0.2.tar.gz
-
-http://www.kette-links.de/technik.php?lang=en
-GPL-2
-OO representation of GPX and conversion utilities between GPX, KML and OVL
-amd64 x86
-distutils multilib python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
