@@ -6,7 +6,7 @@ http://www.kette-links.de/technik/gpxdata-1.1.0.tar.gz
 http://www.kette-links.de/technik.php?lang=en
 GPL-2
 OO representation of GPX and conversion utilities between GPX, KML and OVL
-amd64 ~x86
+amd64 x86
 distutils multilib python toolchain-funcs
 
 
