@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Apr 2011; James Rowe <jnrowe@gmail.com> -gpxdata-1.0.2.ebuild,
+  gpxdata-1.1.0.ebuild:
+  Keyworded x86.
+
   01 Apr 2011; James Rowe <jnrowe@gmail.com> gpxdata-1.1.0.ebuild:
   Keyworded amd64.
 
